--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,15 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap");
 .music-player {
-  max-width: 24rem;
+  max-width: 80%;
   margin: 0 auto;
   padding: 1.5rem;
   background: #090909;
   border-radius: 1rem;
-  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
+
 .card__subtitle {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-style: italic;
   font-weight: 400;
   font-size: 20px;
@@ -17,6 +18,7 @@
   text-align: center;
   cursor: pointer;
 }
+
 .player-container {
   display: flex;
   flex-direction: column;
@@ -59,8 +61,12 @@
 }
 
 @keyframes rotate {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .volume-controls {
@@ -82,7 +88,7 @@
 
 .volume-label {
   color: white;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   font-size: 1.2rem;
 }
 
@@ -161,7 +167,7 @@
 
 .lyrics-section {
   width: 100%;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   text-align: center;
 }
 
